<resources>
    <string name="app_name">Egypt Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="details">Details</string>
    <string name="caption">here, is the caption</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="have_problem">I have a problem with: </string>
    <string name="feedback">Feedback</string>
    <string name="cities">Cities</string>
    <string name="map">Map</string>
    <string name="nearest_cities">Nearest Cities</string>
    <string name="type_of_tourism">type_of_tourism</string>
    <string name="enjoy_egypt">Enjoy Egypt</string>
    <string name="take_me">Take me there</string>
    <string name="preview">Previews</string>
    <string name="sights">Sights</string>
    <string name="contents">Contents</string>
    <string name="comment">Comment</string>
    <string name="read_more_arrow">Read_more_arrow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sight_name">Sight Name</string>
    <string name="egypt">Egypt,</string>
    <string name="cairo">Cairo</string>
    <string name="entity">entity</string>
    <string name="distance">distance</string>
    <string name="city_name">city_name</string>
    <string name="price">price</string>
    <string name="_150">50$/day</string>
    <string name="entity_image">entity_image</string>
    <string name="phone_number">phone_number</string>
    <string name="star">star</string>
    <string name="star_hotel">Four Seasons Hotel</string>
    <string name="hotel_description">Five star hotel, we have a very good rooms and restaurants</string>
    <string name="location">Cairo, Egypt</string>
    <string name="bank_masr">Bank Masr</string>
    <string name="bank_masr_desc">bank Masr for in egypt</string>
    <string name="Cinema_star">cinema star</string>
    <string name="cinema_tube">Cinema Stars</string>
    <string name="zoo">the ZOO</string>
    <string name="restaurant">Kasr El Shouk Restaurant</string>
    <string name="dream_park">dream_park</string>
    <string name="entity_description">we are so happy to have you at out place, you will have much fun</string>
    <string name="current_entity">current_entity</string>
    <string name="ENTITY_TYPE">ENTITY_TYPE</string>
    <string name="work_time">From %d am To  %d pm</string>

    <string-array name="Fragments_names">
        <item>Hotels</item>
        <item>Restaurants</item>
        <item>Entertainments</item>
        <item>Banks</item>
        <item>Universities</item>
    </string-array>
    <string name="price_per_day">%d $ / day</string>
    <string name="fees">%dK $ / year</string>
    <string name="phone_no1">01115408275</string>
    <string name="CarioUniversity">cairo university</string>
    <string name="Pictures">Pictures</string>
    <string name="General">General</string>
    <string name="Famous">Famous</string>
    <string name="preferred">Starred</string>
    <string name="communicate">Communicate</string>
    <string name="search">Search</string>
    <string name="ENTITY_POS">ENTITY_POS</string>
    <string name="star_removed">star removed</string>
    <string name="starred">Starred</string>
</resources>
