<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_entity_icon"
        android:layout_width="@dimen/city_image_height"
        android:layout_height="@dimen/city_image_height"
        android:layout_centerVertical="true"
        android:contentDescription="@string/entity_image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_entity_name"
        style="@style/titles_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_margin_medium"
        android:layout_marginLeft="@dimen/padding_margin_medium"
        android:layout_toEndOf="@id/iv_entity_icon"
        android:layout_toRightOf="@id/iv_entity_icon"
        android:text="@string/entity" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_entity_name"
        android:layout_marginStart="@dimen/padding_margin_large"
        android:layout_marginLeft="@dimen/padding_margin_large"
        android:layout_toEndOf="@id/iv_entity_icon"
        android:layout_toRightOf="@id/iv_entity_icon"
        android:text="@string/city_name" />

    <TextView
        android:id="@+id/tv_fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_location"
        android:layout_marginStart="@dimen/padding_margin_large"
        android:layout_marginLeft="@dimen/padding_margin_large"
        android:layout_toEndOf="@id/iv_entity_icon"
        android:layout_toRightOf="@id/iv_entity_icon"
        android:text="@string/_150" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_fees"
        android:layout_marginTop="@dimen/padding_margin_small"
        android:background="@android:color/darker_gray" />
</RelativeLayout>