<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sight_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".detail_frag">

        <ImageView
            android:id="@+id/iv_sight_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_pic_height"
            android:layout_marginBottom="@dimen/padding_margin_medium"
            android:contentDescription="@string/sights"
            android:scaleType="fitXY"
            android:src="@drawable/m2"
            app:layout_constraintBottom_toTopOf="@+id/tv_sight_name"
            app:layout_constraintStart_toStartOf="@+id/tv_sight_name"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_large"
            android:contentDescription="@string/star"
            android:scaleType="fitXY"
            android:src="@drawable/star_holo"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sight_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toEndOf="@+id/tv_sight_name"
            app:layout_constraintTop_toTopOf="@+id/tv_sight_name" />
        <TextView
            android:id="@+id/tv_sight_name"
            style="@style/titles_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_small"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/entity"
            app:layout_constraintBottom_toTopOf="@+id/tv_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_sight_image" />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_medium"
            android:layout_marginLeft="@dimen/padding_margin_medium"
            android:padding="@dimen/padding_margin_medium"
            android:text="@string/egypt"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/tv_sight_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_sight_name" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_medium"
            android:layout_marginLeft="@dimen/padding_margin_medium"
            android:padding="@dimen/padding_margin_medium"
            android:text="@string/phone_number"
            android:linksClickable="true"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/tv_sight_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

        <TextView
            android:id="@+id/textView8"
            style="@style/subtitle_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_small"
            android:text="@string/contents"
            app:layout_constraintBottom_toTopOf="@+id/rv_content_pictures"
            app:layout_constraintStart_toStartOf="@+id/rv_content_pictures"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_content_pictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_margin_small"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            app:layout_constraintBottom_toTopOf="@+id/video_sight"
            app:layout_constraintStart_toStartOf="@+id/video_sight"
            app:layout_constraintTop_toBottomOf="@+id/tv_details" />

        <TextView
            android:id="@+id/textView9"
            style="@style/subtitle_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_small"
            android:text="@string/details"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/rv_content_pictures" />

        <VideoView
            android:id="@+id/video_sight"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/padding_margin_medium"
            app:layout_constraintBottom_toTopOf="@+id/btn_take_me_there_sight"
            app:layout_constraintStart_toStartOf="@+id/btn_take_me_there_sight"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tv_details"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_small"
            android:background="@color/gray_light_pure"
            android:maxLines="5"
            android:textColor="@color/bright_black"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_margin_small"
            android:background="@color/gray_light"
            app:layout_constraintBottom_toTopOf="@+id/tv_details"
            app:layout_constraintStart_toStartOf="@+id/tv_details"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/read_more_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_small"
            android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:contentDescription="@string/read_more_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_details" />

        <Button
            android:id="@+id/btn_take_me_there_sight"
            style="@style/button_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_medium"
            android:background="@drawable/button_"
            android:text="@string/take_me"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_sight" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>